--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_bluetooth_serial: ^0.4.0
   shared_preferences: ^2.0.13
   logger: ^1.1.0
+  permission_handler: ^10.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
